--- a/README
+++ b/README
@@ -1,4 +1,8 @@
 My marked up version of Roman Scoccimarro's 2LPTic code.
 
+  http://cosmo.nyu.edu/roman/2LPT/
+
+This code is currently being heavily refactored, and may be buggy.
+
 -- Nikhil Padmanabhan
 Yale, March 2012
